--- a/index.qmd
+++ b/index.qmd
@@ -1,42 +1,47 @@
 ---
-title: La Palma Earthquakes
+title: Shauna's ML DoodlePad
 author:
-  - name: Steve Purves
+  - name: Shauna Heron
     orcid: 0000-0002-0760-5497
     corresponding: true
-    email: steve@curvenote.com
+    email: sheron@laurentian.ca
     roles:
       - Investigation
       - Project administration
       - Software
       - Visualization
     affiliations:
-      - Curvenote
-  - name: Rowan Cockett
-    orcid: 0000-0002-7859-8394
-    corresponding: false
-    roles: []
-    affiliations:
-      - Curvenote
+      - Laurentian University
 keywords:
   - La Palma
   - Earthquakes
 abstract: |
-  In September 2021, a significant jump in seismic activity on the island of La Palma (Canary Islands, Spain) signaled the start of a volcanic crisis that still continues at the time of writing. Earthquake data is continually collected and published by the Instituto Geográphico Nacional (IGN). ...
+  This is where I doodle when I'm learning ML stuff!
 plain-language-summary: |
-  Earthquake data for the island of La Palma from the September 2021 eruption is found ...
+  Scratch, scratch
 key-points:
-  - A web scraping script was developed to pull data from the Instituto Geogràphico Nacional into a machine-readable form for analysis
-  - Earthquake events on La Palma are consistent with the presence of both mantle and crustal reservoirs.
+  - Lots of doodling.
 date: last-modified
 bibliography: references.bib
 citation:
-  container-title: Earth and Space Science
+  container-title: Computational Science
 number-sections: true
 jupyter: python3
 ---
 
 ## Introduction
+
+The course I need to complete:
+
+https://www.youtube.com/playlist?list=PLAqhIrjkxbuWI23v9cThsA9GvCAUhRvKZ
+
+Checkout this colab: 
+
+https://colab.research.google.com/drive/1oO4wwpnzeOFcnGH93RlngINoF7bFDN9L?usp=sharing#scrollTo=5_3dkifntwAJ
+
+Planet Banatt:
+
+https://planetbanatt.net/articles/deepseek.html
 
 ```{python}
 import matplotlib.pyplot as plt
